--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <script src="tree.js"></script>
-        <script src="dot.js"></script>
-        <script src="lib.js"></script>
+        <script src="https://cdn.rawgit.com/chengtie/funfunlib/tree.js"></script>
+        <script src="https://cdn.rawgit.com/chengtie/funfunlib/dot.js"></script>
+        <script src="https://cdn.rawgit.com/chengtie/funfunlib/lib.js"></script>
     </head>
     <body>
         <script>
