--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,7 @@
         <script>
         var x = dot2table(dot);
         var y = table2dot(x);
-        console.log(JSON.stringify(y));
+        document.write(JSON.stringify(y));
         </script>
     </body>
 </html>
